# lang-kal

./: .cvsignore  .gitignore  .glottologid.txt  AUTHORS  CITATION.cff  IssuesInGreenlandic.md  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  _config.yml  autogen.sh  configure.ac  derivations-inflections-affixes-fst-src.md  derivations-inflections-affixes.jspwiki  derivations-inflections-affixes.md  disambiguator-cg3-src.md  functions-cg3-src.md  giella-kal.pc.in  index-header.md  index.md  kal.md  lemmacount.json  lex.md  lex.xml  manifest.toml  manifest.toml.in  morph.html  morph.md  nouns-stems-fst-src.md  nouns-stems.jspwiki  numerals-affixes-fst-src.md  propernouns-affixes-fst-src.md  propernouns-stems-fst-src.md  root-fst-src.md  root-morphology.jspwiki  root-morphology.md  src-cg3-dependency.cg3.md  (+44 more)
docs/: Links.md  Makefile.am  _config.yml  derivations-inflections-affixes.jspwiki  index-header.md  index.md  index.xml  kal.jspwiki  kal.md  language-map.md  lex.xml  nouns-stems.md  preamble.jspwiki  propernouns-affixes.jspwiki  propernouns-affixes.md  root-morphology.jspwiki  root-morphology.md  site.xml  spellersuggs.json  typossize.json
docs/badgedata/: fst-lemmacount.json  speller-suggestions.json  speller-version.json
docs/typosreport/: report.json
src/: Makefile  Makefile.am  abbr-kal-lex.txt  acro-kal-lex.txt  ateq-kal-lex.txt  ateq-kal-morph.txt  hyph-kal.txt  index.xml  kal-dep.rle  kal-dis.rle  kal-dis3.rle  kal-lex.txt  kaldan-lex.txt  kaleo-lex.txt  noun-kal-lex.txt  num-kal-lex.txt  orth-kal.xfst  phon-kal.xfst  pron-kal-lex.txt  prt-kal-lex.txt  punct-kal-lex.txt  tag-da.regex  tag-kal.regex  twol-kal.txt  twolmake  verb-kal-lex.txt  xfst-kal.txt
src/cg3/: Makefile.am  dep_KalEng.cg3  dependency.cg3  disambiguator.cg3  functions.cg3  kal-augment.cg3  kal-pre1.cg3  kal-pre2.cg3  split_merge.cg3  tagdeclaration.cg3  valency.cg3
src/filters/: area-tags.txt  derivation-tags.txt  dialect-tags.txt  error-tags.txt  grammatical-tags.txt  lexicon-tags.txt  make-optional-area-tags.regex  make-optional-derivation-tags.regex  make-optional-dialect-tags.regex  make-optional-error-tags.regex  make-optional-grammatical-tags.regex  make-optional-orig_lang-tags.regex  make-optional-semantic-tags.regex  orig_lang-tags.txt  remove-area-tags.regex  remove-derivation-strings.regex  remove-derivation-tags.regex  remove-dialect-tags.regex  remove-error-strings.regex  remove-error-tags.regex  remove-grammatical-tags.regex  remove-orig_lang-tags.regex  remove-semantic-tags-before-derivations.regex  remove-semantic-tags.regex  remove-usage-tags.regex  reorder-semantic-tags.regex  semantic-tags.txt  usage-tags.txt
src/fst/: Makefile.am  phonology.xfscript  root.lexc  tags.yaml  url.tmp.lexc
src/fst/affixes/: numerals.lexc  propernouns.lexc  symbols.lexc
src/fst/filters/: Makefile.am  rm-ill-morph-comb.regex
src/fst/morphology/: Makefile.am  phonology.xfscript  root.lexc
src/fst/morphology/affixes/: Der_vv_IV.lexc  OLD_documentation.txt  dokumentation.txt  enclitics.lexc  inflections-NUM.lexc  inflections-nouns.lexc  inflections-verbs-IV.lexc  inflections-verbs-TV.lexc  loanwords.lexc  mixed.lexc  noun-to-noun.lexc  noun-to-verb.lexc  noun_to_noun.lexc  noun_to_verb.lexc  numerals.lexc  propernouns.lexc  testing.txt  verb-to-noun.lexc
src/fst/morphology/stems/: abbreviations.lexc  acronyms.lexc  nouns.lexc  numerals.lexc  particles.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/morphology/test/: Makefile.am  generate-noun-lemmas.sh.in  generate-propernoun-lemmas.sh.in  intrans-codes.txt  paradigm.kal.txt  test-Z2_lZ-inflections.txt  test-Z2_rZ-inflections.txt  test-Z2aqZ-inflections.txt  test-Z2i2Z-inflections.txt  test-tup-inflections.txt  (+6 more)
src/fst/orthography/: Makefile.am  inituppercase.regex  spellrelax.regex
src/fst/phonetics/: txt2ipa.xfscript
src/fst/stems/: abbreviations.lexc  acronyms.lexc  nouns.lexc  numerals.lexc  particles.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-symbols2text.lexc
src/hyphenation/: hyphenation.xfscript
src/morphology/: Makefile.am  Makefile.modifications-phon.am  definitions.lexc  root.lexc  tags.yaml
src/morphology/affixes/: numerals.lexc  proper.lexc  propernouns.lexc
src/morphology/lexical-data/: proper.lexc  punctuation.lexc
src/morphology/stems/: abbreviations.lexc  acro.lexc  acronyms.lexc  nouns.lexc  numerals.lexc  particles.lexc  pronouns.lexc  propernouns.lexc  punctuation.lexc  verbs.lexc
src/orthography/: Makefile.am  allcaps.xfscript  spellrelax-nfc2nfd.regex  spellrelax-nfc2nfd.regex.sigma.nfc  spellrelax-nfc2nfd.regex.sigma.nfd  spellrelax.regex  spellrestrict-nfd2nfc.regex  spellrestrict-nfd2nfc.regex.sigma.nfc  spellrestrict-nfd2nfc.regex.sigma.nfd
src/phonetics/: convert2ipa.xfscript  text2ipa.xfscript
src/phonetics/tests/: run_tests.sh
src/phonology/: Makefile.am  kal-phon.xfscript  kal.twolc.m4
src/script/: abbr_grep.pl  addtrad_klda.pl  kal-dep.sh  kal-deptrace.sh  kal-dis.sh  kal-distrace.sh  multitags.pl
src/spellchecker/: default-error-model.txt  voikko-fi_FI.pro
src/syntax/: dependency.cg3  disambiguation.cg3  disambiguator.cg3  kal-pre1.cg3  kal-pre2.cg3
src/tagsets/: tag-kal.regex
src/transcriptions/: kleinschmidt2norm.xfscript
tools/grammarcheckers/: Makefile.am  errors-da.ftl  errors-en.ftl  errors-kl.ftl  errors.json  errors.source.xml  grammarchecker.cg3  index.xml  liststemplates.cg3  modeviewer.cg3  pipeline.ts  pipespec.xml  pipespec.xml.in  spellchecker.cg3  split-merge.cg3
tools/grammarcheckers/tests/: Makefile.am  msyn-abs-rel-pos.yaml  msyn-abs-taama-case.yaml  msyn-abs-via.yaml  msyn-arg-abs-rel.yaml  msyn-arg-ins-trm.yaml  msyn-arg-trm-ins.yaml  msyn-con-rel.yaml  msyn-excl-abl.yaml  msyn-ins-abl.yaml  syn-abs-wordorder.yaml
tools/shellscripts/: .gitignore  Makefile.am  kal-analyse.in  kal-generate.in  kal-hybrid-merge  kal-hybrid-split.in  kal-lu-prefix.in  kal-prefix-propagate  kal-spell-heur.in  kal-tokenise.in
(+195 files in other folders)
