## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# Old docs:
# Install these files:
#doc_DATA=danfreq.txt index.xml korpustags.kal.txt lex.xml \
#		 morph.html paradigm.kal.txt site-frag.xml tabs-frag.xml

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

JSP_PAGES=root-morphology.jspwiki \
		  derivations-inflections-affixes.jspwiki \
		  nouns-stems.jspwiki \
		  numerals-affixes.jspwiki \
		  propernouns-affixes.jspwiki 
# compounding-morphology.jspwiki   \
# derivation-morphology.jspwiki   \
# abbreviations-stems.jspwiki      \
# acronyms-stems.jspwiki           \
# adjectives-oahpa-stems.jspwiki   \
# adjectives-stems.jspwiki         \
# adpositions-stems.jspwiki        \
# adverbs-stems.jspwiki            \
# conjunctions-stems.jspwiki       \
# interjections-stems.jspwiki      \
# nouns-oahpa-stems.jspwiki        \
# numerals-stems.jspwiki           \
# particles-stems.jspwiki          \
# pronouns-stems.jspwiki           \
# propernouns-stems.jspwiki        \
# punctuation-stems.jspwiki        \
# smi-propernouns-stems.jspwiki    \
# subjunctions-stems.jspwiki       \
# verbs-stems.jspwiki              \
# adjectives-oahpa-affixes.jspwiki \
# adjectives-affixes.jspwiki       \
# verbs-affixes.jspwiki

include $(top_srcdir)/../giella-core/am-shared/doc-dir-include.am
