## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# Old docs:
# Install these files:
#doc_DATA=danfreq.txt index.xml korpustags.kal.txt lex.xml \
#		 morph.html paradigm.kal.txt site-frag.xml tabs-frag.xml

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md \
		  derivations-inflections-affixes.md \
		  nouns-stems.md \
		  numerals-affixes.md \
		  propernouns-affixes.md 
# compounding-morphology.md   \
# derivation-morphology.md   \
# abbreviations-stems.md      \
# acronyms-stems.md           \
# adjectives-oahpa-stems.md   \
# adjectives-stems.md         \
# adpositions-stems.md        \
# adverbs-stems.md            \
# conjunctions-stems.md       \
# interjections-stems.md      \
# nouns-oahpa-stems.md        \
# numerals-stems.md           \
# particles-stems.md          \
# pronouns-stems.md           \
# propernouns-stems.md        \
# punctuation-stems.md        \
# smi-propernouns-stems.md    \
# subjunctions-stems.md       \
# verbs-stems.md              \
# adjectives-oahpa-affixes.md \
# adjectives-affixes.md       \
# verbs-affixes.md

include $(top_srcdir)/../giella-core/am-shared/doc-dir-include.am
